--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage":"https://reynaldo-bejarano.github.io/SuperMario/",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build:css": "postcss ./src/tailwind.css -o ./public/css/main.css",
     "build": "NODE_ENV=production postcss ./src/tailwind.css -o ./public/css/main.css",
     "dev": "nodemon -x npm run build:css -w src/tailwind.css -w tailwind.config.js -w public/index.html"
@@ -14,6 +17,7 @@
   "dependencies": {
     "@tailwindcss/jit": "^0.1.7",
     "autoprefixer": "^10.2.5",
+    "gh-pages": "^3.2.3",
     "postcss-cli": "^8.3.1",
     "prefixer": "0.0.3",
     "tailwindcss": "^2.0.3",
